Update bootstrap.js to use custom engine build
- Modified bootstrap.js to load local xash.js/xash.wasm instead of CDN
- Updated .gitignore to exclude large build artifacts (client/build/, xash3d-fwgs/build/, etc.)
- Updated xash3d-fwgs submodule with WebRTC transport implementation

--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,12 @@ server/rehlds/addons/**/data/
 server/rehlds/addons/**/plugins/compiled/
 client/assets/games/cs16.zip
 
+# Engine build artifacts (large binary files)
+client/build/
+xash3d-fwgs/build/
+xash3d-fwgs/rodir/
+
 # Editors
 .vscode/
 .idea/
 .DS_Store
-
