go service webrtc relay to the python relay, and new dashboard ui, and some cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ yohimik-original/
 
 # Node.js (if needed for future development)
 package*.json
+go-webrtc-server/public/valve.zip
+web-client/public/valve.zip
