--- a/relay/requirements.txt
+++ b/relay/requirements.txt
@@ -1,4 +1,7 @@
-aiortc==1.9.0
-fastapi==0.112.0
-uvicorn[standard]==0.30.0
-prometheus-client==0.20.0
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
+aiortc==1.6.0
+prometheus-client==0.19.0
+websockets==12.0
+httpx==0.25.2
