--- a/docker-compose.hybrid.yml
+++ b/docker-compose.hybrid.yml
@@ -3,22 +3,18 @@ version: '3.8'
 services:
   cs16-webrtc-relay:
     build: .
-    ports:
-      - "8080:8080"  # Go WebRTC server (client access)
-      - "3000:3000"  # Python API server (metrics/dashboard)
+    network_mode: "host"
     environment:
       - PORT=3000
       - CLIENT_DIR=/app/client
-      - RELAY_DEFAULT_BACKEND_HOST=host.docker.internal  # Access host ReHLDS
+      - RELAY_DEFAULT_BACKEND_HOST=127.0.0.1
       - RELAY_DEFAULT_BACKEND_PORT=27015
       - DM_PORT=27016
       - RELAY_ALLOWED_BACKENDS=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
-    extra_hosts:
-      - "host.docker.internal:host-gateway"  # Access host machine
     volumes:
-      - ./logs:/app/logs  # Optional: for logs
+      - ./logs:/app/logs
+      - ./yohimik-client:/app/yohimik-client
     restart: unless-stopped
-
-networks:
-  default:
-    name: cs16-network
+    ports:
+      - "8080:8080"
+      - "3000:3000"
