--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,21 @@
-DOMAIN=relay.example.com
-EMAIL=admin@example.com
+# CS1.6 Web - Environment Configuration Template
+# Copy this to .env and customize for your deployment
 
-# Relay
-RELAY_BIND=0.0.0.0
-RELAY_HTTP_PORT=8080
-RELAY_WS_PATH=/signal
-RELAY_ALLOWED_ORIGINS=https://relay.example.com
-RELAY_ALLOWED_BACKENDS=10.13.13.0/24
-RELAY_DEFAULT_BACKEND_HOST=10.13.13.2
-RELAY_DEFAULT_BACKEND_PORT=27015
-RELAY_AUTH_TOKEN=change-me
+# CS Game Server Configuration
+CS_SERVER_HOST=mainbrain
+CS_SERVER_PORT=27015
+
+# Web Server Configuration  
+WEB_SERVER_PORT=8080
+PYTHON_RELAY_PORT=3000
+
+# Security Settings
+RCON_PASSWORD=REPLACE_WITH_YOUR_SECURE_PASSWORD
+
+# Network Configuration
+RELAY_ALLOWED_ORIGINS=*
+RELAY_ALLOWED_BACKENDS=127.0.0.0/8,10.0.0.0/8,192.168.0.0/16,172.16.0.0/12
+
+# Advanced Settings (optional)
+RELAY_IDLE_SEC=300
 STUN_SERVERS=stun:stun.l.google.com:19302
