--- a/cs-server/docker-compose.yml
+++ b/cs-server/docker-compose.yml
@@ -1,12 +1,16 @@
 version: "3.8"
+
+# Uses setup.sh to generate server.cfg, then starts the server
+# Run: ./setup.sh && docker-compose up -d
+
 services:
   cs-server:
     image: timoxo/cs1.6:1.9.0817
     container_name: cs-server
     environment:
-      - MAXPLAYERS=8
-      - MAP=cs_747
-      - PORT=27015
+      - MAXPLAYERS=${CS_SERVER_MAXPLAYERS:-8}
+      - MAP=${CS_SERVER_MAP:-cs_747}
+      - PORT=${CS_SERVER_PORT:-27015}
       - SERVERCFG=/home/steam/csserver/cstrike/server.cfg
     volumes:
       - ./server.cfg:/home/steam/csserver/cstrike/server.cfg:ro
