--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ RCON_PASSWORD=REPLACE_WITH_YOUR_SECURE_PASSWORD
 RELAY_ALLOWED_ORIGINS=*
 RELAY_ALLOWED_BACKENDS=127.0.0.0/8,10.0.0.0/8,192.168.0.0/16,172.16.0.0/12
 
+# WebRTC Configuration
+WEBRTC_HOST_IP=auto
+# Set to 'auto' for auto-detection, or specify your local IP (e.g., 192.168.1.100)
+# Use this if auto-detection fails or for LAN deployments
+
 # Advanced Settings (optional)
 RELAY_IDLE_SEC=300
 STUN_SERVERS=stun:stun.l.google.com:19302
