--- a/web-server/docker-compose.yml
+++ b/web-server/docker-compose.yml
@@ -10,9 +10,9 @@ services:
       - PORT=${WEB_SERVER_PORT:-8080}
       - IP=${WEBRTC_HOST_IP:-auto}  # WebRTC ICE candidates IP (set in .env or auto-detect)
       - PYTHON_RELAY_URL=http://127.0.0.1:${PYTHON_RELAY_PORT:-3000}
-      - RELAY_DEFAULT_BACKEND_HOST=${CS_SERVER_HOST:-mainbrain}
+      - RELAY_DEFAULT_BACKEND_HOST=${CS_SERVER_HOST:-127.0.0.1}
       - RELAY_DEFAULT_BACKEND_PORT=${CS_SERVER_PORT:-27015}
-      - SERVER_LIST=${CS_SERVER_HOST:-mainbrain}:${CS_SERVER_PORT:-27015}
+      - SERVER_LIST=${CS_SERVER_HOST:-127.0.0.1}:${CS_SERVER_PORT:-27015}
       - RELAY_ALLOWED_ORIGINS=*
       - RELAY_ALLOWED_BACKENDS=127.0.0.0/8,10.0.0.0/8,192.168.0.0/16,172.16.0.0/12
     ports:
@@ -20,5 +20,5 @@ services:
       - "${PYTHON_RELAY_PORT:-3000}:${PYTHON_RELAY_PORT:-3000}"
     extra_hosts:
       - "host.docker.internal:host-gateway"
-      - "mainbrain:host-gateway"
+    network_mode: "host"
     restart: unless-stopped
