fix "your steamid is already in use on this server" - DANGER: only good for LAN, don't go public with it

--- a/cs-server/reunion.cfg
+++ b/cs-server/reunion.cfg
@@ -1,3 +1,40 @@
-# CRITICAL: Required for non-Steam client support
+; ======= Reunion minimal LAN-friendly config =======
+
+; Keep your existing salt — it hardens ID hashing for modes that use it.
 SteamIdHashSalt = MySecretSaltForXashClients123456789012345678901234567890
+
+; AuthVersion: 3 is fine (newer hashing rules).
 AuthVersion = 3
+
+; --- Real Steam clients: KEEP VERIFIED STEAM_ IDs ---
+; This prevents anyone from spoofing your real Steam account.
+cid_Steam         = 1        ; real Steam stays STEAM_x:x:x
+cid_SteamPending  = 9        ; _PENDING while auth in progress
+cid_HLTV          = 7        ; HLTV stays HLTV
+
+; --- Web/Xash clients ---
+; EASIEST for LAN now: allow many to join without unique IDs
+cid_RevEmu2013    = 10       ; VALVE_ID_LAN
+
+; (Optional if you ever see other emu types in logs)
+;cid_RevEmu        = 10
+;cid_OldRevEmu     = 10
+;cid_SC2009        = 10
+;cid_NoSteam48     = 10
+;cid_NoSteam47     = 10
+
+; --- Hygiene (safe defaults, keep or add if present in your build) ---
+; Makes hashed IDs (for IP or HW modes) environment-specific
+EnableGenPrefix2  = 1
+
+; Optional hardening if you later use IP/HW modes:
+; SteamAllowed         = 1
+; ValidateSteamTickets = 1
+
+; ======= Notes =======
+; 10  = VALVE_ID_LAN (non-unique; best for LAN tests)
+; 4   = VALVE_ by IP (unique if source IPs differ)
+; 3   = STEAM_ by IP
+; 1   = real STEAM_ (verified)
+; 7   = HLTV
+; 8/9/11 = _LAN/_PENDING variants (not needed here)
