--- a/web-server/docker-compose.yml
+++ b/web-server/docker-compose.yml
@@ -24,3 +24,4 @@ services:
     restart: unless-stopped
     volumes:
       - ./go-webrtc-server/client:/app/client:ro
+      - ./go-webrtc-server/client/valve.zip:/app/client/valve.zip:ro
