trying some client performance tweaks

--- a/cs-client-config/userconfig.cfg
+++ b/cs-client-config/userconfig.cfg
@@ -23,3 +23,36 @@ cl_sidespeed "400"
 cl_forwardspeed "400"
 cl_backspeed "400"
 
+// TEMPORARY - DO NOT GO PUBLIC WITH THIS
+rcon_password ""
+bind "i" "amxmodmenu"
+
+// === Performance Optimization for Slower Hardware ===
+// AGGRESSIVE settings for iMacs and slower systems
+gl_vsync "0"                    // Avoid 30/15fps half-rate
+r_detailtextures "0"           // Disable detail textures
+gl_ansio "0"                   // Disable anisotropic filtering
+gl_msaa "0"                    // Disable anti-aliasing
+r_decals "32"                  // Reduce decals further (from 300 to 32)
+cl_himodels "0"                // Use low-poly player models
+r_speeds "0"                   // Disable debug rendering
+developer "0"                  // Disable developer mode
+
+// Resolution and quality settings
+cl_resolution "1024x768"
+vid_width "1024"               // Force lower resolution width
+vid_height "768"               // Force lower resolution height
+vid_fullscreen "0"             // Windowed mode
+gl_texturemode "GL_LINEAR"     // Fastest texture filtering
+r_drawviewmodel "1"            // Keep weapon visible
+r_wateralpha "0.5"             // Simple water rendering
+
+// Aggressive FPS and rendering settings
+fps_max "60"                   // Cap framerate to reduce GPU load
+fps_override "1"               // Force FPS cap
+max_fps "60"                   // Alternative FPS setting
+r_norefresh "0"                // Allow screen refresh
+r_novis "0"                    // Don't disable visibility culling
+r_drawentities "1"             // Keep entities visible
+r_dynamic "0"                  // Disable dynamic lighting
+r_lightmap "1"                 // Use lightmaps instead of dynamic
