--- a/cs-server/addons/amxmodx/configs/maps.ini
+++ b/cs-server/addons/amxmodx/configs/maps.ini
@@ -5,3 +5,14 @@
 ; Add in your mod's maps here
 ; Delete this file to use mapcycle.txt
 
+de_dust2
+fy_iceworld
+fy_snow
+de_rats_1337
+de_westworld
+awp_rooftops
+aim_map
+cs_estate
+de_dust2_3x3
+cs_prospeedball
+
