--- a/cs-server/addons/amxmodx/configs/users.ini
+++ b/cs-server/addons/amxmodx/configs/users.ini
@@ -51,4 +51,7 @@
 
 "loopback" "" "abcdefghijklmnopqrstu" "de"
 "STEAM_0:0:960353276" "" "abcdefghijklmnopqrstu" "ce"
-"shane-o" "" "abcdefghijklmnopqrstu" "a"
+"shane-o" "" "abcdefghijklmnopqrstu" "ce"
+"[Xash3D]shane" "" "abcdefghijklmnopqrstu" "a"
+"shane" "" "abcdefghijklmnopqrstu" "a"
+"VALVE_ID_LAN" "" "abcdefghijklmnopqrstu" "ce"
