start getting all three cs servers working (but currently the relay can only talk to one, 27015)

--- a/cs-server/deathmatch/server.cfg
+++ b/cs-server/deathmatch/server.cfg
@@ -41,3 +41,6 @@ mp_startmoney 16000
 mp_buytime 0.5
 mp_freezetime 0
 mp_respawn_delay 1
+map de_rats_1337
+// Force map change at startup  
+exec deathmatch_autoexec.cfg
