--- a/cs-server/gungame/addons/amxmodx/configs/gungame.cfg
+++ b/cs-server/gungame/addons/amxmodx/configs/gungame.cfg
@@ -4,6 +4,15 @@
 // Enable Gun Game
 gg_enabled 1
 
+// === DEATHMATCH MODE (built-in to Gun Game) ===
+gg_dm 1                    // Enable Gun Game deathmatch mode
+gg_dm_spawn_random 2       // Use random spawn points
+gg_dm_start_random 1       // Random weapon start
+gg_dm_spawn_delay 2.0      // 2 second respawn delay
+gg_dm_spawn_afterplant 1   // Respawn after bomb plant
+gg_dm_corpses 1            // Show corpses
+gg_dm_countdown 2.0        // Countdown before respawn
+
 // Weapon Progression Order (Standard Gun Game Sequence)
 // Players progress through these weapons in order
 gg_weapon_order "glock18,usp,p228,deagle,elite,fiveseven,m3,xm1014,mac10,tmp,mp5navy,ump45,p90,galil,famas,ak47,m4a1,sg552,aug,scout,awp,g3sg1,sg550,m249,hegrenade,knife"
