--- a/cs-server/deathmatch/addons/amxmodx/configs/modules.ini
+++ b/cs-server/deathmatch/addons/amxmodx/configs/modules.ini
@@ -1,4 +1,3 @@
-
 ;;;
 ; To enable a module, remove the semi-colon (;) in front of its name.
 ; If it's not here, simply add it its name, one per line.
@@ -20,9 +19,8 @@
 ;;  or file extension.                              ;;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-; Third party modules  
-; Note: CSDM only for deathmatch server - disabled by default
-;csdm
+; Third party modules - DEATHMATCH SERVER
+csdm
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; These modules will be auto-detected and loaded   ;;
