--- a/web-server/docker-compose.go-only.yml
+++ b/web-server/docker-compose.go-only.yml
@@ -4,7 +4,7 @@ services:
   go-webrtc-server:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.go-only
     container_name: cs16-webrtc-server
     environment:
       # Server configuration
