pass cs server port through xash engine so go server knows which to connect to, so 27015 becomes 8015 for webrtc, and then back to 27015 for cs server, to avoid port conflicts locally

--- a/cs-server/gungame/addons/amxmodx/configs/gungame.cfg
+++ b/cs-server/gungame/addons/amxmodx/configs/gungame.cfg
@@ -20,7 +20,7 @@ gg_weapon_order "glock18,usp,p228,deagle,elite,fiveseven,m3,xm1014,mac10,tmp,mp5
 // Game Rules
 gg_teamplay 0           // 0=individual progression, 1=team-based
 gg_turbo 0              // 0=normal, 1=turbo mode (instant weapon switch)
-gg_warmup_time 15       // Warmup time in seconds
+gg_warmup_timer_setting 10  // Warmup time in seconds
 gg_knife_pro 1          // Enable knife pro (steal level on knife kill)
 gg_handicap_on 1        // Enable handicap system for late joiners
 
