--- a/web-server/docker-compose.yml
+++ b/web-server/docker-compose.yml
@@ -21,9 +21,12 @@ services:
       - RELAY_ALLOWED_BACKENDS=127.0.0.0/8,10.0.0.0/8,192.168.0.0/16,172.16.0.0/12
       
     ports:
+      # Dashboard and API
       - "${WEB_SERVER_PORT:-8080}:8080"
+      # WebRTC server ports for CS servers (dynamic range 8000-8030)
+      - "8000-8030:8000-8030"
     
-    # Use host networking for WebRTC ICE candidates
+    # Use host networking for local development (simple and reliable)
     network_mode: "host"
     
     restart: unless-stopped
