--- a/cs-server/deathmatch/addons/amxmodx/configs/csdm.cfg
+++ b/cs-server/deathmatch/addons/amxmodx/configs/csdm.cfg
@@ -54,13 +54,13 @@ csdm_respawn_delay 2.0  // Seconds before respawn
 csdm_spawn_mode 1       // 1=preset spawns, 2=random
 csdm_protection_time 3  // Spawn protection in seconds
 
-// Money Settings
-csdm_money_on_spawn 16000   // Money given on spawn
-csdm_buy_guns 1             // Allow buying weapons
-csdm_buy_equip 1            // Allow buying equipment
+// Money Settings (disabled for CSDM weapon selection)
+csdm_money_on_spawn 0       // No money needed for CSDM weapon selection
+csdm_buy_guns 0             // Disable CS buy menu - use CSDM weapon selection
+csdm_buy_equip 0            // Disable CS buy menu - use CSDM equipment system
 
 // Other Settings
-csdm_ffa 0              // 0=team-based, 1=free-for-all
+csdm_ffa 1              // 0=team-based, 1=free-for-all
 csdm_remove_objectives 1 // Remove bomb sites/hostages
 
 echo "CSDM Configuration Loaded - Deathmatch Mode Active"
