some fixes for classic and deathmatch

--- a/cs-server/deathmatch/addons/amxmodx/configs/csdm.cfg
+++ b/cs-server/deathmatch/addons/amxmodx/configs/csdm.cfg
@@ -59,6 +59,11 @@ csdm_money_on_spawn 0       // No money needed for CSDM weapon selection
 csdm_buy_guns 0             // Disable CS buy menu - use CSDM weapon selection
 csdm_buy_equip 0            // Disable CS buy menu - use CSDM equipment system
 
+// Weapon Menu Settings
+csdm_menu_enabled 1     // Enable weapon selection menu
+csdm_auto_weapon 0      // Don't auto-assign weapons (force menu choice)
+csdm_menu_mode 1        // Menu mode: 1=before spawn, 2=after spawn
+
 // Other Settings
 csdm_ffa 1              // 0=team-based, 1=free-for-all
 csdm_remove_objectives 1 // Remove bomb sites/hostages
