--- a/cs-server/deathmatch/plugins.ini
+++ b/cs-server/deathmatch/plugins.ini
@@ -45,3 +45,4 @@ csdm_ffa.amxx          ; Free-for-all mode
 csdm_protection.amxx    ; Spawn protection
 csdm_misc.amxx         ; Miscellaneous features
 csdm_stripper.amxx     ; Entity stripper (removes objectives)
+csdm_weaponmenu.amxx   ; Weapon selection menu (/guns command)
