CSDM, weapon menus back through hacks

--- a/cs-server/Dockerfile
+++ b/cs-server/Dockerfile
@@ -25,16 +25,21 @@ COPY shared/overviews/ ./overviews/
 ARG SERVER_TYPE
 COPY ${SERVER_TYPE}/ ./
 
-# Copy server-specific addons (plugins and configs) if they exist
+# Copy server-specific addons (plugins, scripting, modules) but NOT configs yet
 # This allows each server type to have its own plugins (CSDM, Gun Game, etc.)
 # Preserve shared modules by copying subdirectories individually
+ARG SERVER_TYPE
 RUN if [ -d "${SERVER_TYPE}/addons" ]; then \
-        for subdir in configs plugins scripting modules; do \
+        for subdir in plugins scripting modules; do \
             if [ -d "${SERVER_TYPE}/addons/amxmodx/$subdir" ]; then \
-                cp -r ${SERVER_TYPE}/addons/amxmodx/$subdir/* ./addons/amxmodx/$subdir/ 2>/dev/null || true; \
+                echo "Copying ${SERVER_TYPE}/addons/amxmodx/$subdir/* to ./addons/amxmodx/$subdir/"; \
+                cp -rf ${SERVER_TYPE}/addons/amxmodx/$subdir/* ./addons/amxmodx/$subdir/ 2>/dev/null || echo "No files to copy in $subdir"; \
             fi; \
         done; \
-    fi
+    fi && \
+    echo "=== Contents of modules directory after copy ===" && \
+    ls -la ./addons/amxmodx/modules/ | grep -E "(cstrike|total)" && \
+    echo "============================================="
 
 # Copy server-specific plugin configuration
 COPY ${SERVER_TYPE}/plugins.ini ./addons/amxmodx/configs/plugins.ini
@@ -47,8 +52,49 @@ RUN echo '#!/bin/bash' > /start-server.sh && \
     echo 'echo "🔧 Substituting environment variables in server.cfg..."' >> /start-server.sh && \
     echo 'envsubst < server.cfg > server.cfg.tmp && mv server.cfg.tmp server.cfg' >> /start-server.sh && \
     echo 'echo "✅ RCON password configured: ${RCON_PASSWORD}"' >> /start-server.sh && \
-    echo 'exec /home/steam/start_server.sh "$@"' >> /start-server.sh && \
+    echo '' >> /start-server.sh && \
+    echo '# TEMPORARY: Start server and fix CSDM config after it loads' >> /start-server.sh && \
+    echo '/home/steam/start_server.sh "$@" &' >> /start-server.sh && \
+    echo 'SERVER_PID=$!' >> /start-server.sh && \
+    echo 'echo "🕐 Waiting for CSDM to generate broken config..."' >> /start-server.sh && \
+    echo 'sleep 8' >> /start-server.sh && \
+    echo 'echo "🔧 Fixing config format (CSDM module failed to load)..."' >> /start-server.sh && \
+    echo 'cat > addons/amxmodx/configs/csdm.cfg << "EOF"' >> /start-server.sh && \
+    echo '[settings]' >> /start-server.sh && \
+    echo 'enabled = 1' >> /start-server.sh && \
+    echo '' >> /start-server.sh && \
+    echo '[equip]' >> /start-server.sh && \
+    echo 'menus = ps' >> /start-server.sh && \
+    echo 'autoitems = ah' >> /start-server.sh && \
+    echo '' >> /start-server.sh && \
+    echo '[primary]' >> /start-server.sh && \
+    echo 'ak47 "AK47" 1' >> /start-server.sh && \
+    echo 'm4a1 "M4A1" 1' >> /start-server.sh && \
+    echo 'awp "AWP" 1' >> /start-server.sh && \
+    echo 'mp5navy "MP5" 1' >> /start-server.sh && \
+    echo 'p90 "P90" 1' >> /start-server.sh && \
+    echo '' >> /start-server.sh && \
+    echo '[secondary]' >> /start-server.sh && \
+    echo 'glock18 "Glock" 1' >> /start-server.sh && \
+    echo 'usp "USP" 1' >> /start-server.sh && \
+    echo 'deagle "Deagle" 1' >> /start-server.sh && \
+    echo 'EOF' >> /start-server.sh && \
+    echo 'echo "✅ Config format fixed"' >> /start-server.sh && \
+    echo 'wait $SERVER_PID' >> /start-server.sh && \
     chmod +x /start-server.sh
+
+# FINAL LAYER: Force copy server-specific configs to ensure they override shared configs
+# This layer is separate and late to prevent caching issues with config changes
+ARG SERVER_TYPE
+COPY ${SERVER_TYPE}/addons/amxmodx/configs/ ./addons/amxmodx/configs/
+RUN echo "=== FINAL CONFIG OVERRIDE: Copied ${SERVER_TYPE} configs ===" && \
+    echo "Files copied:" && \
+    ls -la ./addons/amxmodx/configs/ && \
+    echo "Contents of csdm.cfg after override:" && \
+    head -5 ./addons/amxmodx/configs/csdm.cfg 2>/dev/null || echo "No csdm.cfg found" && \
+    echo "File size and permissions:" && \
+    ls -la ./addons/amxmodx/configs/csdm.cfg && \
+    echo "=== Config override complete ==="
 
 # Set proper permissions for all copied files
 RUN chmod 644 server.cfg reunion.cfg motd.txt mapcycle.txt *.wad && \
