--- a/cs-server/deathmatch/addons/amxmodx/configs/csdm.cfg
+++ b/cs-server/deathmatch/addons/amxmodx/configs/csdm.cfg
@@ -1,71 +1,95 @@
-// CSDM Configuration for Deathmatch Server
-// This file configures weapon availability and spawn behavior
+;CSDM Configuration File for Deathmatch Server
 
-// Enable CSDM
-csdm_active 1
+[settings]
+enabled = 1
+strip_weapons = 1
+weapons_stay = 0
+spawnmode = preset
+remove_bomb = 1
+spawn_wait_time = 0.75
 
-// Weapon Configuration
-// 1 = enabled, 0 = disabled
-csdm_rifles 1           // Enable rifles (AK47, M4A1, etc.)
-csdm_pistols 1          // Enable pistols (Glock, USP, Deagle, etc.)
-csdm_shotguns 1         // Enable shotguns (XM1014, M3)
-csdm_snipers 1          // Enable snipers (AWP, Scout, etc.)
-csdm_smgs 1             // Enable SMGs (MP5, UMP45, etc.)
-csdm_machine_guns 1     // Enable machine guns (M249)
+[ffa]
+enabled = 1
+radar_disable = 0
 
-// Available Weapons List for CSDM
-// Players can choose from these weapons in the weapon menu
-// Primary Weapons
-csdm_weapon ak47 1
-csdm_weapon m4a1 1
-csdm_weapon famas 1
-csdm_weapon galil 1
-csdm_weapon aug 1
-csdm_weapon sg552 1
-csdm_weapon awp 1
-csdm_weapon scout 1
-csdm_weapon g3sg1 1
-csdm_weapon sg550 1
-csdm_weapon mp5navy 1
-csdm_weapon tmp 1
-csdm_weapon p90 1
-csdm_weapon mac10 1
-csdm_weapon ump45 1
-csdm_weapon xm1014 1
-csdm_weapon m3 1
-csdm_weapon m249 1
+[misc]
+remove_objectives = abcd
+block_buy = 1
+ammo_refill = 1
+spawn_radio_msg = 0
+hide_money = 1
+hide_timer = 1
 
-// Secondary Weapons
-csdm_weapon glock18 1
-csdm_weapon usp 1
-csdm_weapon p228 1
-csdm_weapon deagle 1
-csdm_weapon elite 1
-csdm_weapon fiveseven 1
+[stripper]
+enabled = 1
+class = player_weaponstrip
+class = game_player_equip
+class = item_healthkit
+class = item_battery
+class = armoury_entity
+class = item_longjump
 
-// Equipment
-csdm_armor 1            // Enable armor spawning
-csdm_helm 1             // Enable helmet spawning
-csdm_shield 0           // Disable tactical shield
-csdm_nvg 0              // Disable night vision
+[protection]
+enabled = 1
+glowing = 1
+colorst = "255 0 0 200"
+colorsct = "0 0 255 200"
+colorsffa = "0 255 0 200"
+time = 3
 
-// Spawn Settings
-csdm_respawn_delay 2.0  // Seconds before respawn
-csdm_spawn_mode 1       // 1=preset spawns, 2=random
-csdm_protection_time 3  // Spawn protection in seconds
+[equip]
+menus = ps
+autoitems = ah
+grenades = 
+fnadesnum = 0
+always_allow_gunmenu = 0
 
-// Money Settings (disabled for CSDM weapon selection)
-csdm_money_on_spawn 0       // No money needed for CSDM weapon selection
-csdm_buy_guns 0             // Disable CS buy menu - use CSDM weapon selection
-csdm_buy_equip 0            // Disable CS buy menu - use CSDM equipment system
+[secondary]
+usp USP 1
+glock18 Glock 1
+deagle Deagle 1
+p228 P228 1
+elite Elite 1
+fiveseven "Five Seven" 1
 
-// Weapon Menu Settings
-csdm_menu_enabled 1     // Enable weapon selection menu
-csdm_auto_weapon 0      // Don't auto-assign weapons (force menu choice)
-csdm_menu_mode 1        // Menu mode: 1=before spawn, 2=after spawn
+[primary]
+m4a1 M4A1 1
+ak47 AK47 1
+aug AUG 1
+sg552 SG552 1
+galil Galil 1
+famas Famas 1
+scout Scout 1
+awp AWP 1
+sg550 SG550 1
+m249 M249 1
+g3sg1 G3SG1 1
+ump45 "UMP 45" 1
+mp5navy "MP5 Navy" 1
+m3 M3 1
+xm1014 XM1014 1
+tmp TMP 1
+mac10 "Mac 10" 1
+p90 P90 1
 
-// Other Settings
-csdm_ffa 1              // 0=team-based, 1=free-for-all
-csdm_remove_objectives 1 // Remove bomb sites/hostages
+[botsecondary]
+deagle
+usp
+elite
+fiveseven
 
-echo "CSDM Configuration Loaded - Deathmatch Mode Active"
+[botprimary]
+ak47
+m4a1
+aug
+sg552
+galil
+famas
+scout
+awp
+sg550
+m249
+g3sg1
+mp5navy
+m3
+xm1014
