--- a/cs-server/classic/addons/amxmodx/configs/modules.ini
+++ b/cs-server/classic/addons/amxmodx/configs/modules.ini
@@ -31,12 +31,12 @@
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 ; Standard modules (normally auto-detected)
-fun
-engine
-fakemeta
-geoip
-sockets
-regex
-nvault
-hamsandwich
-cstrike
+; fun      ; Disabled - already loaded by Metamod
+; engine   ; Disabled - already loaded by Metamod
+; fakemeta ; Disabled - already loaded by Metamod
+; geoip    ; Disabled - already loaded by Metamod
+; sockets  ; Disabled - already loaded by Metamod
+; regex    ; Disabled - already loaded by Metamod
+; nvault   ; Disabled - already loaded by Metamod
+; hamsandwich ; Disabled - already loaded by Metamod
+; cstrike  ; Disabled - already loaded by Metamod
