--- a/cs-server/classic/plugins.ini
+++ b/cs-server/classic/plugins.ini
@@ -27,6 +27,9 @@ mapchooser.amxx		; map voting system
 ; Anti-cheat and Stability
 antiflood.amxx		; anti-flood protection
 
+; Weapon Menu Plugin (for deathmatch functionality)
+; simple_weaponmenu.amxx	; Lightweight weapon selection menu (disabled - compilation issue)
+
 ; Optional Features
 ;imessage.amxx		; info messages
 ;statscfg.amxx		; stats configuration
