--- a/cs-server/deathmatch/addons/amxmodx/configs/modules.ini
+++ b/cs-server/deathmatch/addons/amxmodx/configs/modules.ini
@@ -4,11 +4,11 @@
 ; You don't need to write the _amxx part or the file extension.
 ;;;
 
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; SQL Modules usually need to be enabled manually ;;
 ;; You can have any number on at a time.  Use      ;;
 ;;  amx_sql_type in sql.cfg to specify the default ;;
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 ;mysql
 ;sqlite
@@ -19,7 +19,7 @@
 ;;  or file extension.                              ;;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-; Third party modules - DEATHMATCH SERVER
+; CSDM Module
 csdm
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -29,12 +29,12 @@ csdm
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 ; Standard modules (normally auto-detected)
-fun
-engine
-fakemeta
-geoip
-sockets
-regex
-nvault
-hamsandwich
-cstrike
+; fun      ; Disabled - already loaded by Metamod
+; engine   ; Disabled - already loaded by Metamod
+; fakemeta ; Disabled - already loaded by Metamod
+; geoip    ; Disabled - already loaded by Metamod
+; sockets  ; Disabled - already loaded by Metamod
+; regex    ; Disabled - already loaded by Metamod
+; nvault   ; Disabled - already loaded by Metamod
+; hamsandwich ; Disabled - already loaded by Metamod
+; cstrike  ; Disabled - already loaded by Metamod
