--- a/cs-server/deathmatch/plugins.ini
+++ b/cs-server/deathmatch/plugins.ini
@@ -1,47 +1,25 @@
-; Deathmatch Server Plugins Configuration
-; This configuration enables plugins suitable for deathmatch gameplay
+; Simple Deathmatch Server Plugins Configuration
+; Custom deathmatch setup without CSDM complexity
 
 ; Admin Base - Always required
-admin.amxx		; admin base (required for any admin-related)
+admin.amxx              ; admin base (required for any admin-related)
 
 ; Basic Admin Commands
-admincmd.amxx		; basic admin console commands
-adminhelp.amxx		; help command for admin console commands
-adminslots.amxx		; slot reservation
-multilingual.amxx	; Multi-Lingual management
+admincmd.amxx           ; basic admin console commands
+adminhelp.amxx          ; help command for admin console commands
+adminslots.amxx         ; slot reservation
+multilingual.amxx       ; Multi-Lingual management
 
-; Deathmatch-Specific Menus
-menufront.amxx		; front-end for admin menus
-cmdmenu.amxx		; command menu (speech, settings)
-plmenu.amxx		; players menu (kick, ban, client cmds.)
-mapsmenu.amxx		; maps menu (vote, changelevel)
-pluginmenu.amxx		; Menus for commands/cvars organized by plugin
+; Admin Menus
+menufront.amxx          ; front-end for admin menus
+cmdmenu.amxx            ; command menu (speech, settings)
+plmenu.amxx             ; players menu (kick, ban, client cmds.)
+mapsmenu.amxx           ; maps menu (vote, changelevel)
+pluginmenu.amxx         ; Menus for commands/cvars organized by plugin
 
-; Essential Plugins for Deathmatch
-; Note: For full CSDM functionality, download csdm.amxx from:
-; https://forums.alliedmods.net/showthread.php?t=47306
-; and place it in shared/addons/amxmodx/plugins/
-; Then uncomment the following line:
-;csdm.amxx		; Counter-Strike Deathmatch plugin
+; Utility Plugins
+timeleft.amxx           ; time left display
+antiflood.amxx          ; anti-flood protection
 
-; Alternative: Use existing plugins for deathmatch-like behavior
-adminvote.amxx		; voting system
-timeleft.amxx		; time left display
-scrollmsg.amxx		; scrolling messages
-
-; Anti-cheat and Stability
-antiflood.amxx		; anti-flood protection
-
-; Optional Features
-;imessage.amxx		; info messages
-;nextmap.amxx		; next map display
-;statscfg.amxx		; stats configuration
-
-; CSDM (Counter-Strike Deathmatch) Plugins
-csdm_main.amxx          ; Main CSDM plugin
-csdm_spawn_preset.amxx  ; Spawn point management
-csdm_equip.amxx         ; Equipment management
-csdm_ffa.amxx          ; Free-for-all mode
-csdm_protection.amxx    ; Spawn protection
-csdm_misc.amxx         ; Miscellaneous features
-csdm_stripper.amxx     ; Entity stripper (removes objectives)
+; Custom Deathmatch Plugin
+simple_deathmatch.amxx  ; Custom deathmatch with weapon menu and instant respawn
