--- a/cs-server/deathmatch/server.cfg
+++ b/cs-server/deathmatch/server.cfg
@@ -1,4 +1,4 @@
-// Deathmatch CS 1.6 Server Configuration
+// Classic CS 1.6 Server Configuration
 // Server Name and Information
 hostname "CS1.6 Web - Deathmatch Server"
 sv_contact "admin@localhost"
@@ -8,17 +8,24 @@ maxplayers 16
 sv_lan 0
 sv_region 3
 
-// Game Mode Settings - Deathmatch
+// Physics and Game Rules
+sv_gravity 800
+sv_accelerate 10
+sv_friction 4
+sv_maxvelocity 3000
+
+// Deathmatch settings
 mp_roundtime 0
-mp_timelimit 10
-mp_fraglimit 50
-mp_autokick 0
-mp_autoteambalance 0
-mp_limitteams 0
+mp_startmoney 16000
+mp_buytime 9999
+mp_freezetime 0
 mp_friendlyfire 0
 mp_footsteps 1
 mp_flashlight 1
 mp_tkpunish 0
+mp_freeforall 1
+mp_buyzone 3
+mp_maxmoney 16000
 
 // Network Settings
 port 27016
@@ -35,12 +42,12 @@ sv_log_onefile 0
 // RCON Password (from environment)
 rcon_password "${RCON_PASSWORD}"
 
-// Custom Deathmatch Settings
+// Custom Settings
 sv_cheats 0
-mp_startmoney 16000
-mp_buytime 0.5
-mp_freezetime 0
-mp_respawn_delay 1
+allow_spectators 1
+mp_timelimit 0
+mp_winlimit 0
+
+// Load Reunion and AMX Mod X
+exec reunion.cfg
 map de_rats_1337
-// Force map change at startup  
-exec deathmatch_autoexec.cfg
