cleanup after getting CSDM working

--- a/cs-server/deathmatch/addons/amxmodx/configs/csdm.cfg
+++ b/cs-server/deathmatch/addons/amxmodx/configs/csdm.cfg
@@ -149,20 +149,20 @@ menus = ps
 ; g - grenades
 ; d - defusekit (CTs only!)
 ; n - nightvision
-autoitems = ahg
+autoitems = ah
 
 ;Grenade flags:
 ; f - flashbang
 ; h - he grenade
 ; s - smoke grenade
-grenades = fhs
+grenades = h
 
 ;Sets number of flashbangs given if
 ; grenades are enabled
 fnadesnum = 2
 
 ;Enables the guns menu always when the players uses say "guns"
-always_allow_gunmenu = 0
+always_allow_gunmenu = 1
 
 ;;;;;;;;;;;;;;;;
 ;;WEAPON MENUS;;
@@ -191,9 +191,9 @@ galil Galil 1
 famas Famas 1
 scout Scout 1
 awp AWP 1
-sg550 SG550 1
-m249 M249 1
-g3sg1 G3SG1 1
+;sg550 SG550 1
+;m249 M249 1
+;g3sg1 G3SG1 1
 ump45 "UMP 45" 1
 mp5navy "MP5 Navy" 1
 m3 M3 1
@@ -206,26 +206,26 @@ p90 P90 1
 ;List weapons here the bots can randomly have
 ;The short name must match one in the list above
 [botsecondary]
-deagle
+;deagle
 usp
-elite
+;elite
 fiveseven
 
 [botprimary]
-ak47
-m4a1
-aug
-sg552
+;ak47
+;m4a1
+;aug
+;sg552
 galil
 famas
 scout
-awp
-sg550
-m249
-g3sg1
+;awp
+;sg550
+;m249
+;g3sg1
 mp5navy
-m3
-xm1014
+;m3
+;xm1014
 
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
