revert turbo stuff, but keep DPR x1.0

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,9 @@ package*.json
 **/valve.zip
 *.ztmp
 **/valve.zip.backup*
+**/*valve.zip
+**/*valve.zip.backup*
+**/*valve*.zip
 
 cs-server/logs
 
