--- a/cs-server/deathmatch/addons/amxmodx/configs/maps.ini
+++ b/cs-server/deathmatch/addons/amxmodx/configs/maps.ini
@@ -1,10 +1,63 @@
-; Maps menu configuration for Deathmatch Server
+; Maps menu configuration for All Servers
 ; Format: mapname "Display Name"
+; This file is used by the mapsmenu.amxx plugin to create the admin maps menu
 
-de_rats_1337 "Rats 1337"
+; Classic Maps
+de_dust2 "Dust2"
+de_dust "Dust"
+de_aztec "Aztec"
+de_inferno "Inferno"
+de_nuke "Nuke"
+de_train "Train"
+de_vertigo "Vertigo"
+de_cbble "Cobblestone"
+de_prodigy "Prodigy"
+de_vegas "Vegas"
+de_dust2_2020 "Dust2 2020"
+de_747 "747"
+
+; CS Maps
+cs_office "Office"
+cs_italy "Italy"
+cs_assault "Assault"
+cs_backalley "Back Alley"
+cs_estate "Estate"
+cs_1337_assault "1337 Assault"
+cs_prospeedball "ProSpeedball"
+cs_crackhouse "Crackhouse"
+cs_bikini "Bikini"
+cs_agency_csgo "CS Agency CSGO"
+cs_747 "CS 747"
+cs_mcdonalds "CS McDonalds"
+
+; Fun Maps
+fy_iceworld "Fy_IceWorld"
 fy_snow "Fy_Snow"
-awp_rooftops "AWP Rooftops"
+fy_pool_day "Pool Day"
+fy_simpsons "Fy_Simpsons"
+fy_matrix "Fy_Matrix"
+fy_inferno "Fy_Inferno"
+fy_repub "Fy_Republic"
+playground_x "Playground X"
+
+; Aim Maps
+aim_map "Aim Map"
 aim_ak-colt "AK vs Colt"
+aim_aztec "Aim Aztec"
+
+; AWP Maps
+awp_rooftops "AWP Rooftops"
+awp_forest_cs "AWP Forest CS"
+awp_dust "AWP Dust"
+awp_l337sk337beta "AWP L337 Sk337 Beta"
+
+; Special Maps
+de_rats_1337 "Rats 1337"
+de_westwood "Westwood"
+de_hogwarts "Hogwarts"
+dusty_scouts "Dusty Scouts"
+$1000$ "1000 Dollar"
+cs_16fighter "16 Fighter"
+mcdonalds_playplace "McDonalds Playplace"
 de_dust2_3x3 "Dust2 3x3"
 cs_deagle5 "Deagle5"
-fy_pool_day "Pool Day"
