--- a/cs-server/gungame/server.cfg
+++ b/cs-server/gungame/server.cfg
@@ -42,3 +42,10 @@ mp_buytime 0
 mp_freezetime 2
 mp_respawn_delay 2
 map de_rats_1337
+
+// Gravity Commands
+amx_addmenuitem "Gravity: Low (100)" "amx_sv sv_gravity 100" "a" "AMX Mod X"
+amx_addmenuitem "Gravity: Medium-Low (150)" "amx_sv sv_gravity 150" "a" "AMX Mod X"
+amx_addmenuitem "Gravity: Medium (200)" "amx_sv sv_gravity 200" "a" "AMX Mod X"
+amx_addmenuitem "Gravity: Medium-High (250)" "amx_sv sv_gravity 250" "a" "AMX Mod X"
+amx_addmenuitem "Gravity: Default (800)" "amx_sv sv_gravity 800" "a" "AMX Mod X"
