--- a/cs-server/shared/addons/amxmodx/configs/maps.ini
+++ b/cs-server/shared/addons/amxmodx/configs/maps.ini
@@ -11,10 +11,10 @@ de_nuke "Nuke"
 de_train "Train"
 de_vertigo "Vertigo"
 de_cbble "Cobblestone"
+de_tides "Tides"
 de_prodigy "Prodigy"
 de_vegas "Vegas"
 de_dust2_2020 "Dust2 2020"
-de_747 "747"
 
 ; CS Maps
 cs_office "Office"
@@ -27,8 +27,6 @@ cs_prospeedball "ProSpeedball"
 cs_crackhouse "Crackhouse"
 cs_bikini "Bikini"
 cs_agency_csgo "CS Agency CSGO"
-cs_747 "CS 747"
-cs_mcdonalds "CS McDonalds"
 
 ; Fun Maps
 fy_iceworld "Fy_IceWorld"
@@ -38,18 +36,17 @@ fy_simpsons "Fy_Simpsons"
 fy_matrix "Fy_Matrix"
 fy_inferno "Fy_Inferno"
 fy_repub "Fy_Republic"
-playground_x "Playground X"
 
 ; Aim Maps
 aim_map "Aim Map"
 aim_ak-colt "AK vs Colt"
+aim_dust "Aim Dust"
 aim_aztec "Aim Aztec"
 
 ; AWP Maps
 awp_rooftops "AWP Rooftops"
 awp_forest_cs "AWP Forest CS"
 awp_dust "AWP Dust"
-awp_l337sk337beta "AWP L337 Sk337 Beta"
 
 ; Special Maps
 de_rats_1337 "Rats 1337"
@@ -61,3 +58,4 @@ cs_16fighter "16 Fighter"
 mcdonalds_playplace "McDonalds Playplace"
 de_dust2_3x3 "Dust2 3x3"
 cs_deagle5 "Deagle5"
+
