--- a/cs-server/shared/addons/amxmodx/configs/users.ini
+++ b/cs-server/shared/addons/amxmodx/configs/users.ini
@@ -45,13 +45,13 @@
 ; <name|ip|steamid> <password> <access flags> <account flags>
 
 ; Examples of admin accounts:
-; "STEAM_0:0:123456" "" "abcdefghijklmnopqrstu" "ce"
-; "123.45.67.89" "" "abcdefghijklmnopqrstu" "de"
-; "My Name" "my_password" "abcdefghijklmnopqrstu" "a"
+; "STEAM_0:0:123456" "" "abcdefghijklmnopqrstual" "ce"
+; "123.45.67.89" "" "abcdefghijklmnopqrstual" "de"
+; "My Name" "my_password" "abcdefghijklmnopqrstual" "a"
 
-"loopback" "" "abcdefghijklmnopqrstu" "de"
-"STEAM_0:0:960353276" "" "abcdefghijklmnopqrstu" "ce"
-"shane-o" "" "abcdefghijklmnopqrstu" "ce"
-"[Xash3D]shane" "" "abcdefghijklmnopqrstu" "a"
-"shane" "" "abcdefghijklmnopqrstu" "a"
-"VALVE_ID_LAN" "" "abcdefghijklmnopqrstu" "ce"
+"loopback" "" "abcdefghijklmnopqrstual" "de"
+"STEAM_0:0:960353276" "" "abcdefghijklmnopqrstual" "ce"
+"shane-o" "" "abcdefghijklmnopqrstual" "ce"
+"[Xash3D]shane" "" "abcdefghijklmnopqrstual" "a"
+"shane" "" "abcdefghijklmnopqrstual" "a"
+"VALVE_ID_LAN" "" "abcdefghijklmnopqrstual" "ce"
