--- a/cs-server/gungame/addons/amxmodx/configs/custommenuitems.cfg
+++ b/cs-server/gungame/addons/amxmodx/configs/custommenuitems.cfg
@@ -19,8 +19,8 @@
 
 
 // Gravity Settings
-amx_addmenuitem "Gravity: Low (100)" "amx_cvar sv_gravity 100" "a" "AMX Mod X"
-amx_addmenuitem "Gravity: Medium-Low (150)" "amx_cvar sv_gravity 150" "a" "AMX Mod X"
-amx_addmenuitem "Gravity: Medium (200)" "amx_cvar sv_gravity 200" "a" "AMX Mod X"
-amx_addmenuitem "Gravity: Medium-High (250)" "amx_cvar sv_gravity 250" "a" "AMX Mod X"
-amx_addmenuitem "Gravity: Default (800)" "amx_cvar sv_gravity 800" "a" "AMX Mod X"
+amx_addmenuitem "Gravity: Low (100)" "amx_sv sv_gravity 100" "a" "AMX Mod X"
+amx_addmenuitem "Gravity: Medium-Low (150)" "amx_sv sv_gravity 150" "a" "AMX Mod X"
+amx_addmenuitem "Gravity: Medium (200)" "amx_sv sv_gravity 200" "a" "AMX Mod X"
+amx_addmenuitem "Gravity: Medium-High (250)" "amx_sv sv_gravity 250" "a" "AMX Mod X"
+amx_addmenuitem "Gravity: Default (800)" "amx_sv sv_gravity 800" "a" "AMX Mod X"
