tried and failed to get BHOP and CSDM FFA working

--- a/cs-client-config/userconfig.cfg
+++ b/cs-client-config/userconfig.cfg
@@ -27,6 +27,11 @@ cl_backspeed "400"
 rcon_password "superperfundo"
 bind "i" "amxmodmenu"
 
+// === Bunny Hopping Controls ===
+// Mouse wheel bindings for easier bunny hopping
+bind "mwheelup" "+jump"
+bind "mwheeldown" "+jump"
+
 // === Performance Optimization for Slower Hardware ===
 // AGGRESSIVE settings for iMacs and slower systems
 //gl_vsync "0"                    // Avoid 30/15fps half-rate
