--- a/cs-server/classic/server.cfg
+++ b/cs-server/classic/server.cfg
@@ -45,6 +45,11 @@ allow_spectators 1
 mp_timelimit 30
 mp_winlimit 0
 
+// Bunny Hopping Settings (Manual Bhop - Air Acceleration)
+sv_enablebunnyhopping 1
+sv_airaccelerate 100
+sv_maxspeed 320
+
 // Load Reunion and AMX Mod X
 exec reunion.cfg
 map fy_iceworld
