--- a/cs-server/deathmatch/addons/amxmodx/configs/plugins-csdm.ini
+++ b/cs-server/deathmatch/addons/amxmodx/configs/plugins-csdm.ini
@@ -28,7 +28,7 @@ csdm_stripper.amxx
 csdm_protection.amxx
 
 ;Adds free-for-all mode (must be enabled in csdm.cfg too)
-;csdm_ffa.amxx
+csdm_ffa.amxx
 
 ;Round ticketing mode, like FireArms.  First team to use all
 ; of their death points loses the ability to respawn.
