--- a/cs-server/gungame/server.cfg
+++ b/cs-server/gungame/server.cfg
@@ -41,6 +41,12 @@ mp_startmoney 0
 mp_buytime 0
 mp_freezetime 2
 mp_respawn_delay 2
+
+// Bunny Hopping Settings (Manual Bhop - Air Acceleration)
+sv_enablebunnyhopping 1
+sv_airaccelerate 100
+sv_maxspeed 320
+
 map de_rats_1337
 
 // Gravity Commands
